Closed Bug 1644180 Opened 4 years ago Closed 4 years ago

Assertion failure: !mUsingAsyncZoomContainer || !haveRootContentOutsideAsyncZoomContainer (If there is an async zoom container, all scroll nodes with root content scroll metadata should be inside it), at APZCTreeManager.cpp:566

Categories

(Core :: Panning and Zooming, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- disabled
firefox77 --- disabled
firefox78 --- disabled
firefox79 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: kats)

References

Details

(Keywords: assertion)

Attachments

(2 files)

This assertion trips on devtools/client/inspector/test/browser_inspector_highlighter-eyedropper-xul.js and devtools/client/inspector/markup/test/browser_markup_remove_xul_attributes.js mochitests when run with apz.allow_zooming=true

Assignee: nobody → kats
Blocks: 1621740
Severity: normal → S3
Priority: P5 → P3

The same assertion is hit in bug 1610657.

See Also: → 1610657
Attached file Layers dump

0x7f8e202d9800 has the async zoom container, and the rcd is 0x7f8e318d1800 which is in a different subtree. Presumably we shouldn't be making the former an async zoom container.

Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3346f60d3fa7
Don't make an async zoom container of a layer that isn't async scrollable. r=botond
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Regressions: 1701027
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: