Bug 1644180 - Don't make an async zoom container of a layer that isn't async scrollable. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D78840